# dotenvx-py

./: .env  .gitignore  README.md  pyproject.toml
src/dotenvx_py/: __init__.py  dotenvx.py
src/dotenvx_py/tests/: dotenvx_test.py
tests/: ecies_test.py
