[project]
name = "dotenvx-py"
version = "0.1.0"
description = "Dotenvx Python SDK for managing environment variables with encryption support."
readme = "README.md"
authors = [
    { name = "Libing Chen", email = "libing.chen@gmail.com" }
]
license = "MIT"
keywords = [
    "dotenv",
    "encryption",
    "environment variables",
    "deployments",
    "settings",
    "env",
    "configurations",
]
requires-python = ">=3.9"
dependencies = [
    "eciespy>=0.4.6",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip>=25.2",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
]
